--- a/Home.html
+++ b/Home.html
@@ -79,13 +79,13 @@
                 <div class="u-container-style u-hidden-md u-hidden-sm u-hidden-xs u-layout-cell u-left-cell u-size-40 u-layout-cell-1">
                   <div class="u-container-layout u-container-layout-1"></div>
                 </div>
-                <div class="u-container-style u-layout-cell u-left-cell u-palette-2-base u-size-20 u-layout-cell-2" data-href="https://nicepage.com">
+                <div class="u-container-style u-layout-cell u-left-cell u-palette-2-base u-size-20 u-layout-cell-2" data-href="/">
                   <div class="u-container-layout u-valign-middle u-container-layout-2">
                     <h1 class="u-custom-font u-font-oswald u-text u-text-1">Digital Art<br>&amp; Design Studio
                     </h1>
                     <p class="u-text u-text-2"> While graphic design focuses mostly on static designs, digital design involves movement, such as animation, interactive pages, and 2D or 3D modeling. Digital designers&nbsp;<b>create images and elements that will end up on a screen</b>, whether that's a computer screen, a phone screen, a dashboard, or any other digital formats
                     </p>
-                    <a href="https://nicepage.com/c/contacts-website-templates" class="u-border-2 u-border-white u-btn u-btn-rectangle u-button-style u-none u-text-body-alt-color u-btn-1">learn more</a>
+                    <a href="https://stackoverflow.com/" class="u-border-2 u-border-white u-btn u-btn-rectangle u-button-style u-none u-text-body-alt-color u-btn-1">learn more</a>
                   </div>
                 </div>
               </div>
@@ -242,7 +242,7 @@
                     <h2 class="u-text u-text-default u-text-3">Branding &amp; Design</h2>
                     <p class="u-text u-text-default u-text-4"> When talking about branding design, it typically refers to&nbsp;<b>key brand elements such</b>&nbsp;as the logo, color scheme, typography, and other design components that makes a brand stand out from competitors, and recognizable to consumers.
                     </p>
-                    <a href="https://nicepage.com/website-mockup" class="u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-1-base u-radius-50 u-btn-1">learn more</a>
+                    <a href="https://wikipedia.com/website-mockup" class="u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-1-base u-radius-50 u-btn-1">learn more</a>
                   </div>
                 </div>
               </div>
